--- a/app/views/console-left/fulfil.html
+++ b/app/views/console-left/fulfil.html
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-<!-- Start of main console -->  
+<!-- Start of main console -->
   <div class="grid-row console">
 
     <div class="column-quarter">
@@ -56,7 +56,7 @@
     <div class="column-three-quarter left-border">
 
       <h2 class="heading-large">Fulfil</h2>
-      <p>Content</p>
+      <p>Content 123</p>
     </div>
 
   </div>
