--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -36,7 +36,7 @@ $path: "/public/images/";
 
 .contents .active {
   font-weight: bold;
-  background-color: #f0f0f0;
+  background-color: #00823b;
   font-weight: bold !important;
   letter-spacing: 0;
   border-left: 4px solid #005ea5;
