--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,8 +4,11 @@
 <!-- blank to remove the proposition header -->
 {% endblock %} {% block content %}
 
+<
+
 <main id="content" role="main">
   {% include "includes/phase_banner_alpha.html" %} {% include "includes/breadcrumbs.html" %}
+
 
   <div class="grid-row">
     <div class="column-two-thirds">
@@ -51,26 +54,58 @@
 
     </div>
 
-    <div class="column-three-quarter left-border">
+    <div class="column-three-quarter">
 
-      <h2 class="heading-large">Overview</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus
-        diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus
-        sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
+      <div class="js-tabs"> <!-- JS will add .tabs class -->
+  <ul class="list list-bullet">
+      <li><a class="tabs__link" href="#timeline">Timeline</a></li>
+      <li><a class="tabs__link" href="#application">Application</a></li>
+      <li><a class="tabs__link" href="#actions">Actions</a></li>
+  </ul>
 
-      <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula
-        in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor.
-        Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis
-        vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. </p>
+  <!-- Tab 1 -->
+  <div id="timeline" class="tab-content">
+    <h2 class="heading-medium">Timeline</h2>
+    <table>
+      <tbody>
+        <tr>
+          <td>Submitted expense claim</td>
+          <td>25 July 2017</td>
+        </tr>
+        <tr>
+          <td>Application was made for financial support</td>
+          <td>23 May 2017</td>
+        </tr>
+        <tr>
+          <td>Address details updated</td>
+          <td>5 May 2017</td>
+        </tr>
+        <tr>
+          <td>Applicant was added to the system</td>
+          <td>4 May 2017</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-      <p>Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent
-        taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non
-        tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse
-        potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. </p>
+  <!-- Tab 2 -->
+  <div id="application" class="tab-content">
+    <h2 class="heading-medium">Application details</h2>
+    <p>The applicant process was completed and closed on 29 July 2017.</p>
+  </div>
+
+  <!-- Tab 3 -->
+  <div id="actions" class="tab-content">
+    <h2 class="heading-medium">Actions</h2>
+    <p>No actions available</p>
+  </div>
+</div>
+
 
     </div>
 
-  </div>
+</div>
+
 
 
 
