--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -1,3 +1,4 @@
 <!--[if lte IE 8]><link href="/public/stylesheets/application-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
 <!--[if gt IE 8]><!--><link href="/public/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
+<!--[if gt IE 8]><!--><link href="/public/kit-icons/icons.css" media="screen" rel="stylesheet" type="text/css" />
 <!--<![endif]-->
